--- a/post.html
+++ b/post.html
@@ -9,6 +9,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Jomhuria&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
     <title class="title">Tenacious Traveler</title>
+    <!-- Hotjar Tracking Code for Tenacious Traveler -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:4954737,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 </head>
 <body>
     <header id="header"></header>
