--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Jomhuria&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
     <title>Blog - Tenacious Travels</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <!-- Hotjar Tracking Code for Tenacious Traveler -->
 <script>
     (function(h,o,t,j,a,r){
