--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                 <img class="waves" src="images/wavesOpacity.svg">
             </div>
             <section class="about-me">
-        <h1>About Me</h1>
+        <h1 class="center-text">About Me</h1>
         <p>Hello, fellow adventurers! I'm Alex Sterling, the face and spirit behind the Tenacious Traveler. Welcome to my corner of the internet, where I share tales from the road less traveled, captured moments of breathtaking beauty, and the lessons learned from each bend and break in the path.</p>
         <h3>My Journey</h3>
         <p>Born and raised in the shadow of the Rocky Mountains in Boulder, Colorado, I was fortunate enough to have adventure right on my doorstep. My childhood was filled with hikes, camping trips, and an ever-growing curiosity about the world beyond those majestic peaks. With a degree in Environmental Science and a minor in Creative Writing, I've found a way to blend my love for the natural world with my passion for storytelling.</p>
