--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
         <div class="small-hero blog-hero">
             <img class="waves" src="images/wavesOpacity.svg">
         </div>
-        <h1>Read about my travels</h1>
+        <h1 class="center-text">Read about my travels</h1>
         <section class="posts-container">
             <div class="loading">
                 <span style="--i:1;"></span>
