--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="new-blog-posts">
             <h2>Newest blog posts</h2>
             <div class="carousel-container">
-            <button class="previous-button">&#10094;</button>
+            <button class="previous-button" tabindex="0">&#10094;</button>
             <div class="carousel centered">
                 <div class="loading">
                     <span style="--i:1;"></span>
@@ -61,7 +61,7 @@
 
                 </div>
             </div>
-            <button class="next-button">&#10095;</button>
+            <button class="next-button" tabindex="0">&#10095;</button>
         </div>
         </section>
         <section class="small-hero whois-hero">
