--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <header id="header"></header>
         <main>
             <div class="small-hero about-hero">
-                <img class="waves" src="images/wavesOpacity.svg">
+                <img class="waves" src="images/wavesOpacity.svg" alt="White waves for decoration between images and content">
             </div>
             <section class="about-me">
         <h1 class="center-text">About Me</h1>
