--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <header id="header"></header>
     <main>
         <div class="small-hero contact-hero">
-            <img class="waves" src="images/wavesOpacity.svg">
+            <img class="waves" src="images/wavesOpacity.svg" alt="White waves for decoration between images and content">
         </div>
     <form class="contact-form" id="contactForm">
         <h1>Contact me</h1>
