--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="blog.html"><button class="hero-container CTA">
                 <h2>EXPLORE WITH ME!</h2>
             </button></a>
-            <img class="waves" src="images/wavesOpacity.svg">
+            <img class="waves" src="images/wavesOpacity.svg" alt="White waves for decoration between images and content">
         </section>
         <section class="new-blog-posts">
             <h2>Newest blog posts</h2>
@@ -65,7 +65,7 @@
         </div>
         </section>
         <section class="small-hero whois-hero">
-            <img class="waves top-waves" src="images/wavesOpacity.svg">
+            <img class="waves top-waves" src="images/wavesOpacity.svg" alt="White waves for decoration between images and content">
             <div class="whois">
                 <h2>Who is Tenacious Traveler</h2>
                 <p>Meet Alex Sterling, the spirited voice behind the Tenacious Traveler blog. Born in Boulder, Colorado, with the Rocky Mountains as his first playground, Alex cultivated a deep love for adventure and the natural world. With a degree in Environmental Science and a minor in Creative Writing, he expertly combines his passions, sharing captivating stories and insights from his global travels. From the Amazon forests to the Himalayas, Alex's journey is a testament to the power of persistence and the beauty of our planet. Through the Tenacious Traveler, Alex aims to inspire others to explore responsibly, embrace challenges, and foster a deeper appreciation for the interconnectedness of our world. Join him in embracing the spirit of adventure and the tenacity within each of us to discover the great unknown.</p>
