--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
     <header id="header"></header>
     <main>
         <div class="small-hero blog-hero">
-            <img class="waves" src="images/wavesOpacity.svg">
+            <img class="waves" src="images/wavesOpacity.svg" alt="White waves for decoration between images and content">
         </div>
         <h1 class="center-text">Read about my travels</h1>
         <section class="posts-container">
