--- a/post.html
+++ b/post.html
@@ -89,5 +89,5 @@
 <script src="js/post.js" type="module"></script>
 <script src="js/app.js"></script>
 <script src="js/search.js" type="module"></script>
-<script src="js/comment.js" type="module"></script>
+<script src="js/commentValidation.js" type="module"></script>
 </html>
