--- a/post.html
+++ b/post.html
@@ -53,7 +53,6 @@
             <span style="--i:19;"></span>
             <span style="--i:20;"></span>
             <div class="plane"></div>
-
         </div>
     </div>
     </section>
@@ -75,7 +74,7 @@
         </form>
     </section></div>
     <div class="related-wrapper">
-        <h2>Blog posts in the same category:</h2>
+        <h2>Blog posts from the same continent:</h2>
         <div class="related-container"></div>
     </div>
     <div class="modal">
